Entries from anon-struct.exp not in cooked index

g++ will sometimes use a typedef to give a name to an otherwise
anonymous type for linkage purposes.  gdb tries to handle this odd
scenario, which is enforced by anon-struct.exp.

It's difficult to detect this problem in the current tree, but the
cooked index does not include an entry for these DIEs.

This patch changes gdb to add these to the index.  This is needed by
subsequent changes in this series.

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=32519
Acked-By: Simon Marchi <simon.marchi@efficios.com>